<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.SignUP.ProfileImage"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/profile_image_ProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/blue"
        android:text="@string/profile_image"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="50sp"
        />


    <TextView
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_ProfileImage"
        android:text="@string/real_profile_image"
        android:textAlignment="center"
        />



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_img"
        android:layout_width="130sp"
        android:layout_height="130sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_profile"
        android:layout_marginTop="70sp"
        app:layout_constraintTop_toBottomOf="@id/profile_image_ProfileImage"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_img"
        android:text="@string/click_above_to_add_profile_image"
        android:layout_marginTop="5sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />




    <TextView
        android:id="@+id/profile_image_btn"
        android:layout_width="150sp"
        android:layout_height="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30sp"
        android:text="@string/continu"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:enabled="false"
        />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/profile_image_wait"
        android:layout_width="150sp"
        android:layout_height="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30sp"
        app:SpinKit_Color="@color/white"
        android:background="@drawable/btn_shape"
        app:SpinKit_Style="Circle"
        android:padding="7sp"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>